# PyMarkEditor

./: .gitignore  LICENSE  README.md  setup.cfg
example/: file_to_include.md  output.md  readme_template.md
pme/: main.py
