[metadata]
name = PyMarkEditor
version = 1.0
author = Palibrix
author_email = palibrix@gmail.com
description = Python markdown preprocessor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Palibrix/PyMarkEditor
license='MIT License'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    pme = pme.main:main